force-app/main/default/objects/MPRentalObjectByStore__c/MPRentalObjectByStore__c.object-meta.xml
<CustomObject>
    <label>Objeto de Alquiler por Local</label>
    <nameField>
        <displayFormat>ROS-{000000}</displayFormat>
        <label>Rental Object By Store Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Objetos de Alquiler por Local</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>