force-app/main/default/objects/MPRentalObjectByStore__c/fields/MPRentalObject__c.field-meta.xml
<CustomField>
    <fullName>MPRentalObject__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Objeto de Alquiler</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>MPStore__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Objeto de Alquiler</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>MPStore__c</referenceTo>
    <relationshipLabel>Locales</relationshipLabel>
    <relationshipName>RentalObjectsByStore2</relationshipName>
    <type>Lookup</type>
</CustomField>