force-app/main/default/objects/MPRentalObjectByStore__c/fields/MPStore__c.field-meta.xml
<CustomField>
    <fullName>MPStore__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Local</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>MPStore__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Local</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>MPStore__c</referenceTo>
    <relationshipLabel>Objetos de Alquiler</relationshipLabel>
    <relationshipName>RentalObjectsByStore</relationshipName>
    <type>Lookup</type>
</CustomField>